objects/Tags__c.object
<CustomObject>
    <fields>
        <fullName>Alias_Name__c</fullName>
        <label>Alias Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Name__c</fullName>
        <label>Default Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipName>Tags</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Matchleads Tabs</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Tag-{000}</displayFormat>
        <label>Tags Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matchleads Tabs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>